# huawei-arengine-native-demo

./: README.md  build.gradle  settings.gradle
WorldARCpp/: CMakeLists.txt  build.gradle  proguard-rules.pro
WorldARCpp/src/main/: AndroidManifest.xml
WorldARCpp/src/main/cpp/: jni_interface.cpp  jni_interface.h  world_ar_application.cpp  world_ar_application.h
WorldARCpp/src/main/cpp/rendering/: world_background_renderer.cpp  world_background_renderer.h  world_object_renderer.cpp  world_object_renderer.h  world_plane_renderer.cpp  world_plane_renderer.h  world_point_cloud_renderer.cpp  world_point_cloud_renderer.h  world_render_manager.cpp  world_render_manager.h
WorldARCpp/src/main/cpp/utils/: glm.h  util.cpp  util.h
WorldARCpp/src/main/java/com/huawei/arengine/demos/cworld/: ConnectAppMarketActivity.java  DisplayRotationManager.java  JniInterface.java  PermissionManager.java  TextDisplay.java  UsedByWorldNative.java  WorldArActivity.java  WorldRenderManager.java
WorldARCpp/src/main/res/layout/: activity_main.xml
WorldARCpp/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
selfdemo/: build.gradle
selfdemo/src/main/: AndroidManifest.xml
selfdemo/src/main/cpp/: CMakeLists.txt  huawei_arengine_interface.h  selfdemo.cpp
selfdemo/src/main/java/com/example/selfdemo/: MainActivity.java
selfdemo/src/main/res/layout/: activity_main.xml
